# AFIV

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/formats/: bmp.h  general.h  image.h  ppm.h
include/ui/: app.h  menu.h  preview.h  window.h
include/util/: log.h
src/: main.cpp
src/formats/: bmp.cpp  general.cpp  image.cpp  ppm.cpp
src/ui/: app.cpp  preview.cpp  window.cpp
src/util/: log.cpp
